# darkglass

./: .gitignore  .prettierrc.json  AGENTS.md  Makefile  design.md  index.html  license.md  main.py  makefile  pyproject.toml  readme.md  test_admin_page.py  test_api.py  test_index.py  test_webchat_frame.py
.github/workflows/: release.yml  test.yml
darkglass/: __main__.py  main.py
darkglass/static/: admin.html  webchat.html  webchat.js
static/: admin.html  index.html  webchat.html  webchat.js  widget.js  widget_frame.html
tests/: test_admin_page.py  test_demo.py  test_webchat_frame.py
