[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "darkglass"
version = "1.2.1"
description = "Structured AI system with emebeddable chatbot"
readme = "readme.md"
authors = [
    { name = "Jon Craton", email = "jncraton@gmail.com" }
]
license = {text = "MIT"}
dependencies = [
    "fastapi==0.135.1",
    "uvicorn==0.41.0",
]

[tool.hatch.build.targets.wheel]
packages = ["darkglass"]
exclude = [
  'darkglass.toml'
]
# include the static assets in the package so they are available at runtime
# when the package is installed.  hatchling will copy any files matching
# these globs into the wheel.
include = [
  "darkglass/static/*"
]

[tool.hatch.envs.default]
dependencies = [
    "fastapi==0.135.1",
    "uvicorn==0.41.0",
]

[project.scripts]
darkglass = "darkglass.__main__:main"
