[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "darkglass"
version = "1.4.0"
requires-python = ">=3.11"
description = "Structured AI system with emebeddable chatbot"
readme = "readme.md"
authors = [
    { name = "Jon Craton", email = "jncraton@gmail.com" }
]
license = {text = 'PolyForm Free Trial 1.0.0'}
classifiers = ['License :: Other/Proprietary License']
dependencies = [
    "fastapi==0.135.1",
    "uvicorn==0.41.0",
]

[tool.hatch.build.targets.wheel]
packages = ["darkglass"]
exclude = [
  'darkglass.toml'
]
include = [
  "darkglass/static/*"
]

[tool.hatch.envs.default]
dependencies = [
    "fastapi==0.135.1",
    "uvicorn==0.41.0",
]

[project.scripts]
darkglass = "darkglass.__main__:main"
